src/test/ui/consts/min_const_fn/min_const_fn_unsafe_bad.stderr
error[E0658]: dereferencing raw pointers in constant functions is unstable
  --> $DIR/min_const_fn_unsafe_bad.rs:1:77
   |
LL | const fn bad_const_fn_deref_raw(x: *mut usize) -> &'static usize { unsafe { &*x } }
   |                                                                             ^^^
   |
   = note: see issue #51911 <https://github.com/rust-lang/rust/issues/51911> for more information
   = help: add `#![feature(const_raw_ptr_deref)]` to the crate attributes to enable

error[E0658]: dereferencing raw pointers in constant functions is unstable
  --> $DIR/min_const_fn_unsafe_bad.rs:4:70
   |
LL | const unsafe fn bad_const_unsafe_deref_raw(x: *mut usize) -> usize { *x }
   |                                                                      ^^
   |
   = note: see issue #51911 <https://github.com/rust-lang/rust/issues/51911> for more information
   = help: add `#![feature(const_raw_ptr_deref)]` to the crate attributes to enable

error[E0658]: dereferencing raw pointers in constant functions is unstable
  --> $DIR/min_const_fn_unsafe_bad.rs:7:83
   |
LL | const unsafe fn bad_const_unsafe_deref_raw_ref(x: *mut usize) -> &'static usize { &*x }
   |                                                                                   ^^^
   |
   = note: see issue #51911 <https://github.com/rust-lang/rust/issues/51911> for more information
   = help: add `#![feature(const_raw_ptr_deref)]` to the crate attributes to enable

error[E0658]: unions in const fn are unstable
  --> $DIR/min_const_fn_unsafe_bad.rs:14:5
   |
LL |     Foo { x: () }.y
   |     ^^^^^^^^^^^^^^^
   |
   = note: see issue #51909 <https://github.com/rust-lang/rust/issues/51909> for more information
   = help: add `#![feature(const_fn_union)]` to the crate attributes to enable

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
